--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.8"
 
 # torch deps
 #torch = "^1.10"
-torch = "2.0.1"
+torch = {version = "2.0.1", source = "torch"}
 torchtyping = "^0.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -24,6 +24,10 @@ lalsuite = "^7.0"
 bilby = "^2.1"
 jupyter = "^1.0.0"
 
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
 
 [tool.black]
 line-length = 79
