--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ name = "torch"
 url = "https://download.pytorch.org/whl/cu118"
 priority = "explicit"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
